Commit of version 1.1

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -69,6 +69,7 @@ body {
 }
 
 #sidebar .nav a {
+    width: 100%;
     background: none;
     border-bottom: 1px solid #455A64;
     color: #CFD8DC;
