--- a/src/app/pages/clientes/cliente-form/cliente-form.component.html
+++ b/src/app/pages/clientes/cliente-form/cliente-form.component.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="form-group">
                         <button [disabled]="submittingForm || resourceForm.invalid" type="submit" class="btn btn-primary" style="margin-right:5px;">Salvar</button>
-                        <button type="submit " class="btn btn-primary ">Cancelar</button>
+                        <a [routerLink]="['/clientes']" type="submit " class="btn btn-primary ">Cancelar</a>
                     </div>
                 </form>
             </div>
