--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,6 +59,8 @@
 <div id="viewport">
     <!-- Sidebar -->
     <div id="sidebar">
+        <div class="nav pt-5">
+        </div>
     </div>
     <!-- Content -->
     <div id="content">
