--- a/src/app/pages/clientes/cliente-list/cliente-list.component.html
+++ b/src/app/pages/clientes/cliente-list/cliente-list.component.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top:50px;">
+<div class="container-fluid" style="margin-top:50px;">
     <div class="card">
         <div class="card-body">
             <div class="row">
@@ -10,7 +10,20 @@
                 </div>
             </div>
             <hr>
-            <table datatable id="dtBasicExample" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <div class="container mb-4" align="center">
+                <form [formGroup]="searchForm" (click)="search()" class="col-6">
+                    <div class="row form-group">
+                        <div class="form-group col-md-9" style="text-align: left">
+                            <input type="text" class="form-control" name="keyword" id="keyword" placeholder="Pesquise um cliente" formControlName="keyword">
+                        </div>
+                        <div class="form-group col-md-3" style="text-align: right">
+                            <button type="submit" class="btn btn-primary form-control md-2">Buscar</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <hr>
+            <table class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
                     <tr align="center">
                         <th>Nome</th>
@@ -26,9 +39,20 @@
                         <th>{{ cliente.nome }}</th>
                         <td>{{ cliente.cpf }}</td>
                         <td>{{ cliente.contato }}</td>
-                        <td><a [routerLink]="[cliente.id, 'edit']"><i class="fas fa-list text-primary"></i></a></td>
+                        <td>
+                            <a [routerLink]="[cliente.id, 'details']">
+                                <i class="fas fa-list text-primary"></i>
+                            </a>
+                        </td>
                         <td class="text-danger">R$ 230,00</td>
-                        <td><a [routerLink]="[cliente.id, 'edit']"><i class="fas fa-edit text-primary"></i></a> <a (click)="deleteResource(cliente)"><i class="fas fa-trash-alt text-danger"></i></a></td>
+                        <td>
+                            <a [routerLink]="[cliente.id, 'edit']">
+                                <i class="fas fa-edit text-primary mr-3"></i>
+                            </a> 
+                            <a [routerLink]="[]" (click)="deleteResource(cliente)">
+                                <i class="fas fa-trash-alt text-danger"></i>
+                            </a>
+                        </td>
                     </tr>
                 </tbody>
             </table>
