Vendas, recebimentos e inicio do login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-piggy-bank text-success"></i></a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" routerLink="/lancamentos">Listar</a>
+                    <a class="dropdown-item" routerLink="/recebimentos">Listar</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
