--- a/src/app/pages/clientes/cliente-details/cliente-details.component.html
+++ b/src/app/pages/clientes/cliente-details/cliente-details.component.html
@@ -39,26 +39,26 @@
                             <h4><i class="fas fa-cart-arrow-down text-primary"></i> Vendas</h4>
                         </div>
                         <div class="col-2">
-                            <a routerLink="/vendas/new"><button type="button" class="btn btn-primary" style="margin-left:50px;">Vender</button></a>
+                            <a routerLink="/vendas/{{ resource.id }}/new"><button type="button" class="btn btn-primary" style="margin-left:50px;">Vender</button></a>
                         </div>
                     </div>
                     <hr>
                     <table id="dtBasicExample" class="table table-striped table-bordered" cellspacing="0" width="100%">
                         <thead>
                             <tr align="center">
-                                <th>Valor</th>
                                 <th>Data</th>
+                                <th>Valor</th>
                                 <th>Pagamento</th>
                                 <th>Ações</th>
                             </tr>
                         </thead>
                         <tbody align="center">
                             <tr *ngFor="let venda of resource.vendas">
-                                <td>{{ venda.valor }}</td>
                                 <td>{{ venda.data }}</td>
+                                <td>R${{ venda.valor }}</td>
                                 <td>A vista</td>
 
-                                <td><a routerLink="id/edit"><i class="fas fa-edit text-primary"></i></a> <i class="fas fa-trash-alt text-danger"></i></td>
+                                <td><a routerLink="/vendas/{{ venda.id }}/edit"><i class="fas fa-edit text-primary"></i></a> <i class="fas fa-trash-alt text-danger"></i></td>
                             </tr>
                         </tbody>
                     </table>
@@ -69,38 +69,23 @@
                             <h4><i class="fas fa-piggy-bank text-success"></i> Recebimentos</h4>
                         </div>
                         <div class="col-2">
-                            <a routerLink="new"><button type="button" class="btn btn-success" style="margin-left:50px;">Receber</button></a>
+                            <a routerLink="/recebimentos/{{ resource.id }}/new"><button type="button" class="btn btn-success" style="margin-left:50px;">Receber</button></a>
                         </div>
                     </div>
                     <hr>
                     <table id="dtBasicExample" class="table table-striped table-bordered" cellspacing="0" width="100%">
                         <thead>
                             <tr align="center">
-                                <th>Valor</th>
                                 <th>Data</th>
+                                <th>Valor</th>
                                 <th>Ações</th>
                             </tr>
                         </thead>
                         <tbody align="center">
-                            <tr>
-                                <td>R$ 230,00</td>
-                                <td>18/10/2019</td>
-                                <td><a routerLink="id/edit"><i class="fas fa-edit text-primary"></i></a> <i class="fas fa-trash-alt text-danger"></i></td>
-                            </tr>
-                            <tr>
-                                <td>R$ 230,00</td>
-                                <td>18/10/2019</td>
-                                <td><a routerLink="id/edit"><i class="fas fa-edit text-primary"></i></a> <i class="fas fa-trash-alt text-danger"></i></td>
-                            </tr>
-                            <tr>
-                                <td>R$ 230,00</td>
-                                <td>18/10/2019</td>
-                                <td><a routerLink="id/edit"><i class="fas fa-edit text-primary"></i></a> <i class="fas fa-trash-alt text-danger"></i></td>
-                            </tr>
-                            <tr>
-                                <td>R$ 230,00</td>
-                                <td>18/10/2019</td>
-                                <td><a routerLink="id/edit"><i class="fas fa-edit text-primary"></i></a> <i class="fas fa-trash-alt text-danger"></i></td>
+                            <tr *ngFor="let recebimento of resource.recebimentos">
+                                <td>{{ recebimento.data }}</td>
+                                <td> R$ {{ recebimento.valor }}</td>
+                                <td><a routerLink="/recebimentos/{{ recebimento.id }}/edit"><i class="fas fa-edit text-primary"></i></a> <i class="fas fa-trash-alt text-danger"></i></td>
                             </tr>
                         </tbody>
                     </table>
