--- a/src/app/pages/clientes/cliente-list/cliente-list.component.html
+++ b/src/app/pages/clientes/cliente-list/cliente-list.component.html
@@ -44,7 +44,7 @@
                                 <i class="fas fa-list text-primary"></i>
                             </a>
                         </td>
-                        <td class="text-danger">R$ 230,00</td>
+                        <td class="text-danger">R$ {{ cliente.saldo }}</td>
                         <td>
                             <a [routerLink]="[cliente.id, 'edit']">
                                 <i class="fas fa-edit text-primary mr-3"></i>
