--- a/src/app/core/components/default-navbar/default-navbar.component.html
+++ b/src/app/core/components/default-navbar/default-navbar.component.html
@@ -1,58 +1,66 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="#">Sicar </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav [ngClass]="{active: collapsed}" class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+  <!-- <a class="navbar-brand" href="#">Sicar </a> -->
+  <button type="button" id="sidebarCollapse" class="btn btn-primary"
+    (click)="toggleSidebar()">
+    <i class="fas fa-bars"></i>
+  </button>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
 
-        </ul>
-        <ul class="nav justify-content-end">
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-users text-secondary"></i></a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" routerLink="/clientes">Listar</a>
-                    <a class="dropdown-item" routerLink="/clientes/new">Adicionar</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-cart-arrow-down"></i></a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" routerLink="/vendas">Listar</a>
-                    <a class="dropdown-item" routerLink="/vendas/new">Adicionar</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-piggy-bank text-success"></i></a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" routerLink="/recebimentos">Listar</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-chart-line text-secondary"></i></a>
-                <div class="dropdown-menu">
-                    <a class="dropdown-item" routerLink="/relatorios/clientes-report">Clientes</a>
-                    <a class="dropdown-item" routerLink="/relatorios/lancamentos-report">Recebimentos</a>
-                    <a class="dropdown-item" routerLink="/relatorios/vendas-report">Vendas</a>
-                </div>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary" href="#">
+    </ul>
+    <ul class="nav justify-content-end">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+          aria-expanded="false"><i class="fas fa-users text-secondary"></i></a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" routerLink="/clientes">Listar</a>
+          <a class="dropdown-item" routerLink="/clientes/new">Adicionar</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+          aria-expanded="false"><i class="fas fa-cart-arrow-down"></i></a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" routerLink="/vendas">Listar</a>
+          <a class="dropdown-item" routerLink="/vendas/new">Adicionar</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+          aria-expanded="false"><i class="fas fa-piggy-bank text-success"></i></a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" routerLink="/recebimentos">Listar</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+          aria-expanded="false"><i class="fas fa-chart-line text-secondary"></i></a>
+        <div class="dropdown-menu">
+          <a class="dropdown-item" routerLink="/relatorios/clientes-report">Clientes</a>
+          <a class="dropdown-item" routerLink="/relatorios/lancamentos-report">Recebimentos</a>
+          <a class="dropdown-item" routerLink="/relatorios/vendas-report">Vendas</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-secondary" href="#">
 
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary" href="#">
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-secondary" href="#">
 
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link text-secondary" (click)="logout()">
-                    <i class="fas fa-sign-out-alt"></i>
-                </a>
-            </li>
-        </ul>
-    </div>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link text-secondary" (click)="logout()">
+          <i class="fas fa-sign-out-alt"></i>
+        </a>
+      </li>
+    </ul>
+  </div>
 </nav>
-
