Migração da api e pequenas mudanças

--- a/src/app/pages/clientes/cliente-list/cliente-list.component.html
+++ b/src/app/pages/clientes/cliente-list/cliente-list.component.html
@@ -30,7 +30,7 @@
                         <th>Cpf</th>
                         <th>Contato</th>
                         <th>Lançamentos</th>
-                        <th>Saldo</th>
+                        <th>Dívida</th>
                         <th>Ações</th>
                     </tr>
                 </thead>
