--- a/src/app/pages/clientes/cliente-details/cliente-details.component.html
+++ b/src/app/pages/clientes/cliente-details/cliente-details.component.html
@@ -21,7 +21,7 @@
                             id="contato" formControlName="contato" disabled="disabled">
                     </div>
                     <div class="form-group col-3">
-                        <label for="saldo">Saldo</label> <input type="text" class="form-control  bg-white" id="saldo"
+                        <label for="saldo">Dívida</label> <input type="text" class="form-control  bg-white" id="saldo"
                         value="R$ {{resource.saldo}}" disabled="disabled">
                     </div>
                 </div>
