--- a/src/app/pages/relatorios/lancamentos-report/lancamentos-report.component.html
+++ b/src/app/pages/relatorios/lancamentos-report/lancamentos-report.component.html
@@ -5,20 +5,20 @@
                 <i class="fas fa-piggy-bank text-success"></i> Relatório de recebimentos
             </h4>
             <hr>
-            <form>
+            <form [formGroup]="intervaloForm" (submit)="onSubmit()">
                 <div class="form-group row">
                     <div class="form-group col-2">
-                        <label for="cpf_vendedor">Data Inicial</label> <input type="text" class="form-control" id="cpf_vendedor" name="cpf_vendedor" value="" placeholder="dd/mm/aaaa">
+                        <label for="inicio">Data Inicial</label> <input type="text" class="form-control" formControlName="inicio" placeholder="dd/mm/aaaa">
                     </div>
                     <div class="form-group col-2">
-                        <label for="cpf_vendedor">Data Final</label> <input type="text" class="form-control" id="cpf_vendedor" name="cpf_vendedor" value="" placeholder="dd/mm/aaaa">
+                        <label for="fim">Data Final</label> <input type="text" class="form-control" formControlName="fim" placeholder="dd/mm/aaaa">
                     </div>
                     <div class="form-group col-2" style="margin-top:30px;">
                         <button type="submit" class="btn btn-primary" style="margin-right:5px;">Buscar</button>
                     </div>
-                    <DIV class="col-5" style="margin-top:20px;">
-                        <h5>Total de recebimentos do período: R$ 8.100,00</h5>
-                    </DIV>
+                    <div class="col-5" style="margin-top:20px;">
+                        <h5>Total de recebimentos do período: R$ {{relatorio.total}}</h5>
+                    </div>
                 </div>
             </form>
             <table id="dtBasicExample" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -30,20 +30,10 @@
                     </tr>
                 </thead>
                 <tbody align="center">
-                    <tr>
-                        <th>Rafael de Amorim e Silva</th>
-                        <td>R$ 230,00</td>
-                        <td>18/10/2019</td>
-                    </tr>
-                    <tr>
-                        <th>Karen Dantas Antunes</th>
-                        <td>R$ 230,00</td>
-                        <td>18/10/2019</td>
-                    </tr>
-                    <tr>
-                        <th> Cleverson Parreira Júnior</th>
-                        <td>R$ 230,00</td>
-                        <td>18/10/2019</td>
+                    <tr *ngFor="let recebimento of relatorio.recebimentos">
+                        <th>{{recebimento.cliente.nome}}</th>
+                        <td>{{recebimento.valor}}</td>
+                        <td>{{recebimento.data}}</td>
                     </tr>
                 </tbody>
             </table>
