--- a/src/app/pages/clientes/cliente-details/cliente-details.component.html
+++ b/src/app/pages/clientes/cliente-details/cliente-details.component.html
@@ -10,15 +10,15 @@
                 <div class="form-group row">
                     <div class="form-group col-3">
                         <label for="nome">Nome</label> <input type="text" class="form-control bg-white" id="nome"
-                            formControlName="nome" disabled="disabled">
+                            formControlName="nome">
                     </div>
                     <div class="form-group col-3">
                         <label for="cpf">CPF</label> <input type="text" class="form-control bg-white" id="cpf"
-                            formControlName="cpf" disabled="disabled">
+                            formControlName="cpf">
                     </div>
                     <div class="form-group col-3">
                         <label for="contato">Contato</label> <input type="text" class="form-control bg-white"
-                            id="contato" formControlName="contato" disabled="disabled">
+                            id="contato" formControlName="contato">
                     </div>
                     <div class="form-group col-3">
                         <label for="saldo">Dívida</label> <input type="text" class="form-control  bg-white" id="saldo"
