--- a/src/app/pages/login/login-form/login-form.component.html
+++ b/src/app/pages/login/login-form/login-form.component.html
@@ -1,19 +1,14 @@
 <nav class="navbar navbar-light navbar-expand-lg bg-light mb-4">
     <div class="container">
-        <a class="navbar-brand text-danger" routerLink="/login"><i class="fas fa-burn"></i>&nbsp;Hot Stock</a>
+        <a class="navbar-brand text-danger" routerLink="/login"><i class="fas fa-burn"></i>&nbsp;Sicar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-                <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link text-danger">Contato</a>
-                </li>
+      
             </ul>
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link text-danger">Registre-se</a>
-                </li>
                 <li class="nav-item" routerLinkActive="active">
                     <a class="nav-link" routerLink="/login">Login</a>
                 </li>
