Atualizacao dos relatorios e melhorias

--- a/src/app/core/components/default-sidebar/default-sidebar.component.html
+++ b/src/app/core/components/default-sidebar/default-sidebar.component.html
@@ -28,9 +28,6 @@
                 <li>
                     <a class="dropdown-item" routerLink="/vendas">Listar</a>
                 </li>
-                <li>
-                    <a class="dropdown-item" routerLink="/vendas/new">Adicionar</a>
-                </li>
             </ul>
         </li>
         <li routerLinkActive="active">
@@ -42,9 +39,6 @@
                 <li>
                     <a class="dropdown-item" routerLink="/recebimentos">Listar</a>
                 </li>
-                <li>
-                    <a class="dropdown-item" routerLink="/recebimentos/new">Adicionar</a>
-                </li>
             </ul>
         </li>
         <li routerLinkActive="active">
@@ -54,13 +48,7 @@
             </a>
             <ul class="collapse list-unstyled" id="relatoriosSubmenu">
                 <li>
-                    <a class="dropdown-item" routerLink="/relatorios/clientes-report">Clientes</a>
-                </li>
-                <li>
-                    <a class="dropdown-item" routerLink="/relatorios/lancamentos-report">Recebimentos</a>
-                </li>
-                <li>
-                    <a class="dropdown-item" routerLink="/relatorios/vendas-report">Vendas</a>
+                    <a class="dropdown-item" routerLink="/relatorios/report">Relatórios</a>
                 </li>
             </ul>
         </li>
