--- a/src/app/pages/recebimentos/recebimento-form/recebimento-form.component.html
+++ b/src/app/pages/recebimentos/recebimento-form/recebimento-form.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="container" style="margin-top:50px;">
+    <div class="container" style="margin-top:60px;">
         <div class="card col-8">
             <div class="card-body">
                 <h4 class="text-primary">
@@ -25,11 +25,11 @@
                         </div>
                         <div class="col-6">
                             <div class="form-group">
-                                <label for="valor">Valor</label> <input type="number" class="form-control" id="valor"
+                                <label for="valor">Valor</label> <input type="number"  placeholder="R$ 00,00" class="form-control" id="valor"
                                     formControlName="valor">
                             </div>
                             <div class="form-group">
-                                <label for="data">Data</label> <input type="text" class="form-control"
+                                <label for="data">Data</label> <input type="text" placeholder="dd/mm/aaaa" class="form-control"
                                     id="data" formControlName="data">
                             </div>
                             <div class="form-group">
