--- a/src/app/pages/recebimentos/recebimentos-list/recebimentos-list.component.html
+++ b/src/app/pages/recebimentos/recebimentos-list/recebimentos-list.component.html
@@ -1,32 +1,28 @@
-<div class="container-fluid" style="margin-top:50px;">
+<div class="container-fluid" style="margin-top:60px;">
     <div class="card">
         <div class="card-body">
             <div class="row">
-                <div class="col-10">
+                <div class="col-6">
                     <h4><i class="fas fa-piggy-bank text-success"></i> Recebimentos</h4>
                 </div>
-                <div class="col-2">
-                    <a routerLink="new"><button type="button" class="btn btn-primary" style="margin-left:50px;">Adicionar</button></a>
+                <div class="col-6" align="right">
+                        <form [formGroup]="searchForm" (click)="search()">
+                            <div class="row form-group" align="right">
+                                <div class="form-group col-md-9" style="text-align: left">
+                                    <input type="text" class="form-control" name="keyword" id="keyword" placeholder="Pesquise um Recebimento" formControlName="keyword">
+                                </div>
+                                <div class="form-group col-md-3" style="text-align: right">
+                                    <button type="submit" class="btn btn-primary form-control md-2">Buscar</button>
+                                </div>
+                            </div>
+                        </form>
                 </div>
-            </div>
-            <hr>
-            <div class="container mb-4" align="center">
-                <form [formGroup]="searchForm" (click)="search()" class="col-6">
-                    <div class="row form-group">
-                        <div class="form-group col-md-9" style="text-align: left">
-                            <input type="text" class="form-control" name="keyword" id="keyword" placeholder="Pesquise um recebimento" formControlName="keyword">
-                        </div>
-                        <div class="form-group col-md-3" style="text-align: right">
-                            <button type="submit" class="btn btn-primary form-control md-2">Buscar</button>
-                        </div>
-                    </div>
-                </form>
             </div>
             <hr>
             <table class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
                     <tr align="center">
-                        <th>Cliente</th>
+                        <th align="left">Cliente</th>
                         <th>Data</th>
                         <th>Valor</th>
                         <th>Ações</th>
@@ -34,9 +30,9 @@
                 </thead>
                 <tbody align="center">
                     <tr *ngFor="let recebimento of resources">
-                        <td>{{ recebimento.cliente.nome }}</td>
+                        <td align="left">{{ recebimento.cliente.nome }}</td>
                         <td>{{ recebimento.data }}</td>
-                        <td>R$ {{ recebimento.valor }}</td>
+                        <td>{{ recebimento.valor.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' }) }}</td>
                         <td>
                             <a routerLink="/clientes/{{ recebimento.cliente.id }}/details">
                                 <i class="fas fa-user text-primary mr-3"></i>
