--- a/src/app/pages/relatorios/lancamentos-report/lancamentos-report.component.html
+++ b/src/app/pages/relatorios/lancamentos-report/lancamentos-report.component.html
@@ -1,39 +1,68 @@
-<div class="container" style="margin-top:100px;">
+<div class="container-fluid" style="margin-top:60px;">
     <div class="card">
         <div class="card-body">
-            <h4 class="card-title">
-                <i class="fas fa-piggy-bank text-success"></i> Relatório de recebimentos
-            </h4>
-            <hr>
-            <form [formGroup]="intervaloForm" (submit)="onSubmit()">
-                <div class="form-group row">
-                    <div class="form-group col-2">
-                        <label for="inicio">Data Inicial</label> <input type="text" class="form-control" formControlName="inicio" placeholder="dd/mm/aaaa">
-                    </div>
-                    <div class="form-group col-2">
-                        <label for="fim">Data Final</label> <input type="text" class="form-control" formControlName="fim" placeholder="dd/mm/aaaa">
-                    </div>
-                    <div class="form-group col-2" style="margin-top:30px;">
-                        <button type="submit" class="btn btn-primary" style="margin-right:5px;">Buscar</button>
-                    </div>
-                    <div class="col-5" style="margin-top:20px;">
-                        <h5>Total de recebimentos do período: R$ {{relatorio.total}}</h5>
-                    </div>
+            <div class="form-group row">
+                <div class="col-7">
+                    <h4><i class="fas fa-chart-line"></i> Relatório</h4>
                 </div>
-            </form>
+                <div class="col-5">
+                    <form [formGroup]="intervaloForm" (submit)="onSubmit()">
+                        <div class="form-group row">
+                            <div class="form-group col-5">
+                                <label for="inicio">Data Inicial</label> <input type="text" class="form-control"
+                                    formControlName="inicio" placeholder="dd/mm/aaaa">
+                            </div>
+                            <div class="form-group col-5">
+                                <label for="fim">Data Final</label> <input type="text" class="form-control"
+                                    formControlName="fim" placeholder="dd/mm/aaaa">
+                            </div>
+                            <div class="form-group col-2" style="margin-top:30px;">
+                                <button type="submit" class="btn btn-primary" style="margin-right:5px;">Gerar</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <hr>
             <table id="dtBasicExample" class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
-                    <tr align="center">
-                        <th>Cliente</th>
+                    <tr align="left">
+                        <th>Informação</th>
                         <th>Valor</th>
-                        <th>Data</th>
                     </tr>
                 </thead>
-                <tbody align="center">
-                    <tr *ngFor="let recebimento of relatorio.recebimentos">
-                        <th>{{recebimento.cliente.nome}}</th>
-                        <td>{{recebimento.valor}}</td>
-                        <td>{{recebimento.data}}</td>
+                <tbody align="left">
+                    <tr>
+                        <td>Clientes Cadastrados</td>
+                        <td>{{relatorio.countClientes}}</td>
+                    </tr>
+                    <tr>
+                        <td>Quantidade de Vendas</td>
+                        <td>{{relatorio.countVendas}}</td>
+                    </tr>
+                    <tr>
+                        <td>Quantidade de recebimentos</td>
+                        <td>{{relatorio.countRecebimentos}}</td>
+                    </tr>
+                    <tr>
+                        <td>Ticket Médio</td>
+                        <td>{{relatorio.ticketMedio.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' })}}</td>
+                    </tr>
+                    <tr>
+                        <td>Total de Vendas</td>
+                        <td>{{relatorio.totalVendas.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' })}}</td>
+                    </tr>
+                    <tr>
+                        <td>Total de Recebimentos</td>
+                        <td>{{relatorio.totalRecebimentos.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' })}}</td>
+                    </tr>
+                    <tr>
+                        <td>Total de vendas do período</td>
+                        <td>{{relatorio.totalVendasPeriodo.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' })}}</td>
+                    </tr>
+                    <tr>
+                        <td>Total de recebimentos do período</td>
+                        <td>{{relatorio.totalRecebimentosPeriodo.toLocaleString('pt-BR', { style: 'currency', currency: 'BRL' })}}</td>
                     </tr>
                 </tbody>
             </table>
